css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}
/*----HTML----*/
/*----HTML END----*/


/*----NAV----*/
.nav-text {
	text-decoration: none;
	color: white;
	transition: all 0.7s ease;
}

.nav-text:hover {
  font-family: 'Shadows Into Light', cursive;
}


nav {
	position: fixed;
	z-index: 1;
  text-decoration: none;
  color: white;
}

nav {
  position: fixed;
}

.nav-home-top{
  /*display: none;*/
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  top: 1%;
  transition: all 0.5s ease;
}

.i-home {
  width: 128px;
  height: 128px;
}

.nav-home-left{
  display: none;
  position: fixed;
  left: 1%;
  transform: rotate(-90deg) translateY(-50%);
  top: 50%;
  transition: all 0.5s ease;
}

.nav-home-right{
  display: none;
  position: fixed;
  right: 1%;
  transform: rotate(90deg) translateY(-50%);
  top: 50%;
}


.nav-contact{
  position: fixed;
  left: 0%;
  transform: rotate(-90deg) translateY(-50%);
  top: 50%;
}

.nav-listen{
  position: fixed;
  right: 1%;
  transform: rotate(90deg) translateY(-50%);
  top: 50%;
}

.nav-bio{
  position: fixed;
  bottom: 1%;
  left: 50%;
  transform: translateX(-50%);
}

.nav-ul {
  margin: 0;
  padding: 0;
}

/*----NAV END----*/


/*----MAIN PAGE----*/
.main {
  background-image: url("../images/banner2.jpg");
  background-repeat: no-repeat;
  background-color: black;
  height: 100vh;
  width: 100vw;
  background-size: cover;
  position: relative;
}

.logo {
  text-align: center;
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translate(-50%,-30%);
  width: 50%;
}

.slogan {
  color: white;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 60px;
  font-weight: 400;
}

.bannerimg {
  width: 100%;
}

.make-noise {
  width: 70%;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
/*----MAIN PAGE END----*/


/*----ABOUT PAGE----*/
.aboutme {
  min-height: 100vh;
}

.picture {
  width: 100%;
  margin-left: auto;
  margin-right: 0;
  display: block;
}

.aboutme h1 {
  padding-top: 2rem;
  font-weight: 200;
}

.about-body {
  padding: 0.2em;
}

.textsection {

}

.bio-logo {
  left: 690px;
  top: 18px;
  height: 100%;
  position: absolute;
  width: 100%;
  fill: currentColor;
  z-index: 1000;
}
/*----ABOUT PAGE END----*/


/*----LISTEN PAGE----*/
.listen {
  background-image: url("../images/listen-photo.jpg");
  min-height: 100vh;
}

.projects {
  color: #E4E4E4;
  font-weight: 300;
  text-align: center;
}

.listen-title {
  color: white;
}

/*----LISTEN PAGE END----*/


/*----CONTACT PAGE----*/

.contact-body {
  background-image: url("../images/contact-photo2.jpg");
  background-position: 100% 100%;
  background-size: cover;
  height: 100vh;
}

.contact-h2 {
  color: #fff;
  text-align: center;
}

.contact-copy {
  text-align: center;
  color: #fff;
}

.contact-icon-link {
  color: #fff;
  text-decoration: none;
  fill: #fff;
}

.contact-icon-link:hover {
  color: #e2e2e2;
}

.contact-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.contact-icon {
  margin-bottom: .5em;
}

.contact-icon-text {
  font-weight: 300;
}

.contact-social-media-icon {
  fill: #fff;
}

.social-media-icons {
  position: fixed;
  bottom: 10%;
  left: 5%;
}
/*----CONTACT PAGE END----*/
.nav-contact, .nav-bio, .nav-listen {
  display: none;
}
/*----MEDIA QUERIES----*/

@media only screen and (min-width: 608px) {

  .logo {
  width: 40%;
  top: 10%;
  }
  .main-nav {
    display:  block;
  }
  .picture {
    width: 50%;
  }

  .bio-picture {
    text-align: center;
  }

}

@media only screen and (min-width: 960px) {

  .logo {
    width: 30vw;
  top: 10vh;
  }

	.picture {
	  width: 50%;
	}

	html, body {
		overflow: hidden;
	}

  .nav-contact, .nav-bio, .nav-listen {
    display: block;
  }

  .make-noise {
    width: 10%;
    top: 28%;
  }

	.super-wrapper {
		overflow: hidden;
		width: 100vw;
		height: 100vh;
		position: relative;
	}

	.super-wrapper-inner {
		overflow: hidden;
		width: 300vw;
		height: 200vh;
		position: relative;
		padding-left: 100vw;
		transform: translate(-100vw,0);
		transition: all 0.5s ease-out;
	}

  .show-bio .i-home,
  .show-listen .i-home,
  .show-contact .i-home {
    width: 64px;
    height: 64px;
  }


  .show-bio .nav-text {
    	color: black;
    }

  .show-listen .nav-text {
    color: white;
  }

  .show-listen .super-wrapper-inner {
  		transform: translate(-200vw,0);
      transition:
  	}

  .show-bio .super-wrapper-inner {
  		transform: translate(-100vw,-100vh);
  	}

  .show-contact .super-wrapper-inner {
  		transform: translate(0,0);
  	}

  .show-listen .nav-home-top{
    display: block;
  }

  .show-listen .nav-contact{
    display: block;
  }

  .show-listen .nav-listen{
    display: block;
  }

  .show-contact .nav-home-top{
    display: block;
  }

  .show-contact .nav-listen{
    display: block;
  }

  .show-contact .nav-contact{
    display: block;
  }

  .show-bio .nav-home-top{
    display: block;
  }

  .show-bio .nav-bio{
    display: block;
  }

  .aboutme{
		position: absolute;
		top: 100vh;
		width: 100vw;
		left: 100vw;
		height: 100vh;
	}

  .textsection {
    padding-right: 5rem;
  }

	.listen{
		position: absolute;
    overflow-y: scroll;
		right: 0;
		top: 0;
		width: 100vw;
    height: 100vh;
	}

	.contact-body{
		position: absolute;
		left: 0;
		top: 0;
		width: 100vw;
	}

}

@media only screen and (min-width: 1440px) {

  .logo {
    width: 20vw;
    top: 15vh;
  }

  .bannerimg {
    width: 100vw;
    height: 100vh;
  }

  .slogan {
    font-size: 80px;
  }

  .icon-li {
    display: inline-block;
    text-align: center;
  }

  .contact-list {
    text-align: center;
  }

  .projects {
    font-size: 30px;
    margin-bottom: 0;
    margin-left: 1em;
    text-align: left;
  }

}

@media only screen and (min-width: 2550px) {


}
/*----MEDIA QURIES END----*/

